--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^8.0.3",
     "rimraf": "^5.0.5",
     "typescript": "^5.3.3"
   },
