--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "rimraf": "^5.0.5",
+    "socket.io": "^4.7.2",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
@@ -28,7 +30,6 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.10.4",
     "nodemon": "^3.0.2"
   }
