--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rimraf dist && npx tsc",
     "start": "NODE_ENV=production node dist/server.js",
-    "dev": "npm run build && NODE_ENV=development nodemon dist/server.js",
+    "dev": "npm run build && NODE_ENV=development nodemon --watch src --ext ts --exec \"npm run build && node dist/server.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
